front-end/src/app/portfolio/page.module.css
.main {
  min-height: 100vh;
}

.main > .head {
  margin: 1rem auto;
  width: fit-content;
}

.main > .head > h1 {
  color: var(--color-fg-1);
  font-size: var(--font-desktop-display-2);
  font-weight: 700;
  letter-spacing: 0.75rem;
  text-align: center;
}

.head > .sub {
  color: var(--color-fg-2);
  font-size: var(--font-desktop-heading-3);
  font-weight: 600;
  text-align: center;
}

.head > .sub > span {
  color: var(--global-color-accent-2);
}

.main > div {
  padding: 1rem var(--main-padding);
}

.main > .filters {
  margin-bottom: 1rem;
  border-bottom: 2px solid var(--global-color-accent-1);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.filters > .filters_selects {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.75rem;
}

.filters_selects > p {
  font-size: var(--font-desktop-button-1);
  font-weight: 300;
  text-transform: capitalize;
}

.filters_selects > .filter_dropdown {
  width: 10rem;
}

.main > .projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1.75rem;
}

.projects > .load_button {
  grid-column: 1/3;
  align-content: center;
  justify-content: center;
  justify-self: center;
  width: 30%;
}

